# test02

./: README.md  pyproject.toml
mod1/: __init__.py  func.py
nbs/: nb1.ipynb
